[package]
name = "scene_graph"
version = "0.1.0"
authors = ["nathanfaucett <nathanfaucett@gmail.com>"]

keywords = ["scene_graph"]
description = "entity component scene graph for rust"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nathanfaucett/rs-scene_graph.git"
homepage = "https://github.com/nathanfaucett/rs-scene_graph"

[dependencies.impl_any]
git = "https://github.com/nathanfaucett/rs-impl_any.git"

[dependencies.shared]
git = "https://github.com/nathanfaucett/rs-shared.git"
